--- a/دورات حسوب/تطوير الواجهات (جاري)/‏‏الاعمال التطبيقية/1-اساسيات تطوير الواجهات/اساسيات HTML/HTML Basic.html
+++ b/دورات حسوب/تطوير الواجهات (جاري)/‏‏الاعمال التطبيقية/1-اساسيات تطوير الواجهات/اساسيات HTML/HTML Basic.html
@@ -7,6 +7,7 @@ HTML -->
 
     <title> First WeP Page </title>
 
+
 </head>
 <body>
 <P>This is a pargraph</p>
@@ -136,6 +137,7 @@ HTML5-->
 <br>
 <a href="#img">id img</a>
 <br>
+
 <!-- 19+18. التعامل مع النماذج -->
 <form action="">
     <table>
@@ -177,13 +179,22 @@ HTML5-->
     </table>
 </form>
 
+<!-- 20. التعامل مع الصوت والفيديو -->
+<audio id="Audio" controls> <!--controls تعني اضف وحدة التحكم-->
+    <source src="https://www.youtube.com/watch?v=kmUNaKjDjgY" type="audio/mpeg">
+    this is a audio
+</audio>
+
+<video id="video" width="640" height="480" controls> <!--المقاطع من اليوتيوب لا توضع هكذا لها طريقة اخرى-->
+    <source src="D:\التنزيلات\14.mp4" type="audio/mp4">
+    this is a audio
+</video>
 
 <!-- 21. العناصر التقسيمية -->
 <!-- هكذا يتم تقسيم الصفحة وظيفة هذة الاقسام ترتيب العناصر وايضا جعل المتصفحات ومحركات البحث تتعرف عليها  -->
-
 <head></head>
 <nav></nav>
-<article>
+<article> <!--يمثل محتوى الصفحة-->
 <section></section>
 <aside></aside>
 </article>
